// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`align.md 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
|a|b|c|
|:--|:-:|--:|
|d|e|f|

=====================================output=====================================
| a   |  b  |   c |
| :-- | :-: | --: |
| d   |  e  |   f |

================================================================================
`;

exports[`cjk.md 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
| abc | def | ghi |
| --- | --- | --- |
| 第一欄 | 第二欄 | 第三欄 |

=====================================output=====================================
| abc    | def    | ghi    |
| ------ | ------ | ------ |
| 第一欄 | 第二欄 | 第三欄 |

================================================================================
`;

exports[`emoji.md 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
| abc | def | ghi |
| --- | --- | --- |
| 👍👍👍 | 👍👍👍 | 👍👍👍 |

=====================================output=====================================
| abc    | def    | ghi    |
| ------ | ------ | ------ |
| 👍👍👍 | 👍👍👍 | 👍👍👍 |

================================================================================
`;

exports[`empty.md 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
Foo | Bar
--- | ---
X   |
Y   |

=====================================output=====================================
| Foo | Bar |
| --- | --- |
| X   |
| Y   |

================================================================================
`;

exports[`escape.md 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
| a | b | c |
|:--|:-:|--:|
| \\| | \\| | \\| |

=====================================output=====================================
| a   |  b  |   c |
| :-- | :-: | --: |
| \\|  |  \\|  |  \\| |

================================================================================
`;

exports[`html.md 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
Default | CLI Override | API Override
--------|--------------|-------------
\`"none"\` | <code>--trailing-comma <none&#124;es5&#124;all></code> | <code>trailingComma: "<none&#124;es5&#124;all>"</code>

=====================================output=====================================
| Default | CLI Override | API Override |
| --- | --- | --- |
| \`"none"\` | <code>--trailing-comma <none&#124;es5&#124;all></code> | <code>trailingComma: "<none&#124;es5&#124;all>"</code> |

================================================================================
`;

exports[`lang-table.md 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
| Property | Description | Type | Default |
| -------- | ----------- | ---- | ------- |
| bordered | Toggles rendering of the border around the list | boolean | false |
| footer | List footer renderer | string\\|ReactNode | - |
| grid | The grid type of list. You can set grid to something like {gutter: 16, column: 4} | object | - |
| header | List header renderer | string\\|ReactNode | - |
| itemLayout | The layout of list, default is \`horizontal\`, If a vertical list is desired, set the itemLayout property to \`vertical\` | string | - |
| rowKey | Item's unique key, could be a string or function that returns a string | string\\|Function(record):string | \`key\` |
| loading | Shows a loading indicator while the contents of the list are being fetched | boolean\\|[object](https://ant.design/components/spin-cn/#API) ([more](https://github.com/ant-design/ant-design/issues/8659)) | false |
| loadMore | Shows a load more content | string\\|ReactNode | - |
| locale | i18n text including empty text | object | emptyText: 'No Data' <br> |
| pagination | Pagination [config](https://ant.design/components/pagination/), hide it by setting it to false | boolean \\| object | false |
| split | Toggles rendering of the split under the list item | boolean | true |
=====================================output=====================================
| Property | Description | Type | Default |
| --- | --- | --- | --- |
| bordered | Toggles rendering of the border around the list | boolean | false |
| footer | List footer renderer | string\\|ReactNode | - |
| grid | The grid type of list. You can set grid to something like {gutter: 16, column: 4} | object | - |
| header | List header renderer | string\\|ReactNode | - |
| itemLayout | The layout of list, default is \`horizontal\`, If a vertical list is desired, set the itemLayout property to \`vertical\` | string | - |
| rowKey | Item's unique key, could be a string or function that returns a string | string\\|Function(record):string | \`key\` |
| loading | Shows a loading indicator while the contents of the list are being fetched | boolean\\|[object](https://ant.design/components/spin-cn/#API) ([more](https://github.com/ant-design/ant-design/issues/8659)) | false |
| loadMore | Shows a load more content | string\\|ReactNode | - |
| locale | i18n text including empty text | object | emptyText: 'No Data' <br> |
| pagination | Pagination [config](https://ant.design/components/pagination/), hide it by setting it to false | boolean \\| object | false |
| split | Toggles rendering of the split under the list item | boolean | true |

================================================================================
`;

exports[`simple.md 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
| Title A | Title B | Title C |
|---|---|---|
| content A | content B | content C |

=====================================output=====================================
| Title A   | Title B   | Title C   |
| --------- | --------- | --------- |
| content A | content B | content C |

================================================================================
`;

exports[`table.md 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
- min-table

  | Age | Time | Food | Gold | Requirement |
  | ------------ | ----- | ---- | ---- | ----------------------- |
  | Feudal Age | 02:10 | 500 | 0 | Dark Age building x 2 |
  | Castle Age | 02:40 | 800 | 200 |- |
  | Imperial Age | 03:30 | 1000 | 800 | Castle Age building x 2 |
- big-table

  |学号|姓名|分数|
  |-|-|-|
  |小明|男|75|
  |小红|女|79|
  |小陆|男|92|

=====================================output=====================================
- min-table

  | Age          | Time  | Food | Gold | Requirement             |
  | ------------ | ----- | ---- | ---- | ----------------------- |
  | Feudal Age   | 02:10 | 500  | 0    | Dark Age building x 2   |
  | Castle Age   | 02:40 | 800  | 200  | -                       |
  | Imperial Age | 03:30 | 1000 | 800  | Castle Age building x 2 |

- big-table

  | 学号 | 姓名 | 分数 |
  | ---- | ---- | ---- |
  | 小明 | 男   | 75   |
  | 小红 | 女   | 79   |
  | 小陆 | 男   | 92   |

================================================================================
`;
